--- a/tasker_lukas/tasks/templates/base.html
+++ b/tasker_lukas/tasks/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>{% load static %}
+<!DOCTYPE html>{% load static i18n %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <header>
         <span class="logo">TASKer</span>
         <ul class="nav">
-            <li><a href="{% url "index" %}">Dashboard</a></li>
+            <li><a href="{% url "index" %}">{% trans "Dashboard" %}</a></li>
             <li><a href="{% url "task_list" %}">Tasks</a></li>
         </ul>
     </header>
