--- a/tasker_lukas/tasks/static/css/style.css
+++ b/tasker_lukas/tasks/static/css/style.css
@@ -115,7 +115,7 @@ section.messages {
     margin: 0;
 }
 
-section.messages .message {
+.message, ul.errorlist {
     padding: 0.5rem;
     margin: 0;
     border-bottom: 1px solid #888888;
@@ -137,7 +137,7 @@ section.messages .message {
     background-color: #ffcc99;
 }
 
-.message-error {
+.message-error, ul.errorlist {
     background-color: #ffaaaa;
 }
 
@@ -165,4 +165,23 @@ div.fog {
 
 footer .icon {
     max-height: 24px;
+}
+
+main form label {
+    display: inline-block;
+    width: 20vw;
+    min-width: 15rem;
+    font-size: 120%;
+}
+
+main form input,
+main form textarea,
+main form select,
+main form button {
+    font-size: 120%;
+}
+
+main form .helptext {
+    display: block;
+    font-size: 90%;
 }
