--- a/tasker_lukas/tasks/static/css/style.css
+++ b/tasker_lukas/tasks/static/css/style.css
@@ -185,3 +185,21 @@ main form .helptext {
     display: block;
     font-size: 90%;
 }
+
+button, .button {
+    background-color: #d8d8d8;
+    border: 1px solid #666666;
+    border-bottom: 2px solid #004488;
+    padding: 0.5rem;
+    font-size: 120%;
+    cursor: pointer;
+}
+
+button:hover, .button:hover {
+    background-color: #dfdfdf;
+    border-bottom: 2px solid #0055cc;
+}
+
+.toolbar {
+    margin: 0.5rem;
+}
