--- a/tasker_lukas/tasks/static/css/style.css
+++ b/tasker_lukas/tasks/static/css/style.css
@@ -203,3 +203,12 @@ button:hover, .button:hover {
 .toolbar {
     margin: 0.5rem;
 }
+
+.toolbar form {
+    display: inline;
+}
+
+.toolbar from select {
+    padding: 0.4rem;
+    border-radius: 1rem;
+}
