--- a/tasker_lukas/tasks/templates/tasks/task_detail.html
+++ b/tasker_lukas/tasks/templates/tasks/task_detail.html
@@ -5,6 +5,12 @@
     {% if task.is_done %}&#x2611;{% else %}&#x2610;{% endif %}</a>
     {{ task.name }}
 </h1>
+{% if task.owner == request.user %}
+    <p>
+        <a class="button" href="{% url "task_update" task.pk %}">{% trans "edit"|capfirst %}</a>
+{% comment %} <a class="button" href="{% url "task_delete" task.pk %}">{% trans "delete"|capfirst %}</a> {% endcomment %}
+    </p>
+{% endif %}
 <p>{% trans "owner"|capfirst %}: {{ task.owner }} / {% trans "project"|capfirst %}: {{ task.project }}</p>
 <p>{% trans "deadline"|capfirst %}: {{ task.deadline }}</p>
 <p>{{ task.description }}</p>
