--- a/tasker_lukas/tasks/templates/tasks/task_detail.html
+++ b/tasker_lukas/tasks/templates/tasks/task_detail.html
@@ -7,8 +7,10 @@
 </h1>
 {% if task.owner == request.user %}
     <p>
-        <a class="button" href="{% url "task_update" task.pk %}">{% trans "edit"|capfirst %}</a>
-{% comment %} <a class="button" href="{% url "task_delete" task.pk %}">{% trans "delete"|capfirst %}</a> {% endcomment %}
+        <a class="button" href="{% url "task_update" task.pk %}?next={{ request.GET.next|urlencode }}">
+            {% trans "edit"|capfirst %}</a>
+        <a class="button" href="{% url "task_delete" task.pk %}?next={{ request.GET.next|urlencode }}">
+            {% trans "delete"|capfirst %}</a>
     </p>
 {% endif %}
 <p>{% trans "owner"|capfirst %}: {{ task.owner }} / {% trans "project"|capfirst %}: {{ task.project }}</p>
