--- a/tasker_lukas/tasks/templates/tasks/task_list.html
+++ b/tasker_lukas/tasks/templates/tasks/task_list.html
@@ -36,7 +36,7 @@
 {% for task in task_list %}
     <li><a href="{% url "task_done" task.pk %}?next={{ next|urlencode }}">
         {% if task.is_done %}&#x2611;{% else %}&#x2610;{% endif %}</a>
-        <a href="{% url "task_detail" task.pk %}">{{ task.name }}</a>
+        <a href="{% url "task_detail" task.pk %}?next={{ next|urlencode }}">{{ task.name }}</a>
         <span style="float:right;">{{ task.deadline }}</span>
     </li>
 {% endfor %}
